kubernetes/base/media-server-csi-s3/bases/jellyseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    project: media-server
    component: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      project: media-server
      component: jellyseerr
  template:
    metadata:
      labels:
        project: media-server
        component: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: noahhuppert/jellyseerr:feat-media-availability-sync-emby-jellyfin-support-2
          #fallenbagel/jellyseerr:1.7.0
          #@sha256:a8a6a8de3440a3d0061886391b2d8a4646d4e4ef5d7dbfab76e5ad0d98757d13
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-config-csi-s3
      volumes:
        - name: jellyseerr-config-csi-s3
          persistentVolumeClaim:
            claimName: jellyseerr-config-csi-s3
