kubernetes/base/media-server-csi-s3/bases/jellyseerr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  labels:
    project: media-server
    component: jellyseerr
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: request.media-csi-s3.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 80
  tls:
    - hosts:
        - request.media.k8s.funkyboy.zone
      secretName: jellyseerr-csi-s3-ingress-cert
